AAE-14224 Update Activiti to Spring Boot 3 (#4338)
* refactor pom.xml to update java.version to 17

* AAE-14392 Integrate Nashorn in Activiti core

* Revert "AAE-14392 Integrate Nashorn in Activiti core"

This reverts commit a3d2f2cd694c1f8c0647e9831a99e11f54e30425.

* update to spring boot 3

* temporary disable fail on warning license check

* fix no newline at end of file

* remove obsolete spring.factories

* Revert "temporary disable fail on warning license check"

This reverts commit 2da7a0bc3f2f4751c97f34d4894dbfac32c17bb3.

* add -parameters complier args to maven-compiler-plugin configuration

* remove trailing whitespace

* AAE-14386 backport activiti-juel-impl from odysseus juel-impl

* add dev-igdianov-jdk17 base branch for PRs

* fix pre-commit

* add missing license header

* add Juel extensions test coverage

* add support for expression factory new instance with system properties

* update pull request base branch

* rename activiti-juel-impl to activiti-juel-jakarta

* update comments

* apply prettier java formatting for activiti-juel-jakarta module

* rename custom Juel features with `activiti.juel` prefix

* cleanup PR base branch

* Revert "refactor pom.xml to update java.version to 17 "

This reverts commit 45d9203c1c98cf1d826ca68c46abc7e2ee50d028.

* update activiti-juel-jakarta version to 7.12.0-SNAPSHOT

* update project version 8.0.0-SNAPSHOT

* use JDK 11 for updatebot push version steps

* Remove usage of hamcrest assertions

* Update name for step defining sdk for updatebot

* rename variables

---------

Co-authored-by: Elias Ricken de Medeiros <26007058+erdemedeiros@users.noreply.github.com>